--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,22 @@
----
----
-<div>
-    <p class="max-w-screen-xl mx-auto text-white">Footer - tilføj footerindhold</p>
-</div>
-      
+<section class="bg-blue-color-blue-500 py-36">
+  <div class="pl-10 lg:grid lg:grid-cols-3 lg:max-w-7xl lg:mx-auto">
+    <div class="pb-6">
+      <p class="text-grey-color-grey-500">Om os</p>
+      <p class="text-grey-color-grey-500">Kontakt</p>
+      <p class="text-grey-color-grey-500">FAQ</p>
+    </div>
+
+    <div class="pb-6">
+      <p class="text-grey-color-grey-500">Handelsbetingelser</p>
+      <p class="text-grey-color-grey-500">Cookie- og privatlivspolitik</p>
+      <p class="text-grey-color-grey-500">Persondatapolitik</p>
+      <p class="text-grey-color-grey-500">Servicevilkår</p>
+    </div>
+
+    <div>
+      <p class="text-grey-color-grey-500">© 2024, Maltclub</p>
+      <p class="text-grey-color-grey-500">Din månedlige leverandør af kvalitetsøl</p>
+      <p class="text-grey-color-grey-500">Sikker handel</p>
+    </div>
+  </div>
+</section>
