--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,19 +1,21 @@
 <section class="bg-blue-color-blue-500 py-36">
-  <div class="pl-10 lg:grid lg:grid-cols-3 lg:max-w-7xl lg:mx-auto">
+  <div class="lg:grid lg:grid-cols-3 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
     <div class="pb-6">
       <p class="text-grey-color-grey-500">Om os</p>
       <p class="text-grey-color-grey-500">Kontakt</p>
       <p class="text-grey-color-grey-500">FAQ</p>
     </div>
 
-    <div class="pb-6">
-      <p class="text-grey-color-grey-500">Handelsbetingelser</p>
-      <p class="text-grey-color-grey-500">Cookie- og privatlivspolitik</p>
-      <p class="text-grey-color-grey-500">Persondatapolitik</p>
-      <p class="text-grey-color-grey-500">Servicevilkår</p>
+    <div class="pb-6 flex justify-center">
+      <div class="text-left">
+        <p class="text-grey-color-grey-500">Handelsbetingelser</p>
+        <p class="text-grey-color-grey-500">Cookie- og privatlivspolitik</p>
+        <p class="text-grey-color-grey-500">Persondatapolitik</p>
+        <p class="text-grey-color-grey-500">Servicevilkår</p>
+      </div>
     </div>
 
-    <div>
+    <div class="pb-6 place-items-end">
       <p class="text-grey-color-grey-500">© 2024, Maltclub</p>
       <p class="text-grey-color-grey-500">Din månedlige leverandør af kvalitetsøl</p>
       <p class="text-grey-color-grey-500">Sikker handel</p>
