--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,24 +1,26 @@
-<section class="bg-blue-color-blue-500 py-36">
-  <div class="lg:grid lg:grid-cols-3 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
-    <div class="pb-6">
-      <p class="text-grey-color-grey-500">Om os</p>
-      <p class="text-grey-color-grey-500">Kontakt</p>
-      <p class="text-grey-color-grey-500">FAQ</p>
+<section class="bg-blue-500 py-20 sm:py-24 md:py-28 lg:py-36 text-grey-500">
+  <div class="grid grid-cols-3 text-xs sm:text-sm lg:text-base px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
+    <div class="lg:pb-6">
+      <p>Om os</p>
+      <p>Kontakt</p>
+      <p>FAQ</p>
     </div>
 
-    <div class="pb-6 flex justify-center">
+    <div class=":pb-6 lg:flex lg:justify-center">
       <div class="text-left">
-        <p class="text-grey-color-grey-500">Handelsbetingelser</p>
-        <p class="text-grey-color-grey-500">Cookie- og privatlivspolitik</p>
-        <p class="text-grey-color-grey-500">Persondatapolitik</p>
-        <p class="text-grey-color-grey-500">Servicevilkår</p>
+        <p>Handelsbetingelser</p>
+        <p>Cookie- og privatlivspolitik</p>
+        <p>Persondatapolitik</p>
+        <p>Servicevilkår</p>
       </div>
     </div>
 
-    <div class="pb-6 place-items-end">
-      <p class="text-grey-color-grey-500">© 2024, Maltclub</p>
-      <p class="text-grey-color-grey-500">Din månedlige leverandør af kvalitetsøl</p>
-      <p class="text-grey-color-grey-500">Sikker handel</p>
+    <div class="pb-6 lg:place-items-end">
+      <div class="text-right">
+        <p>© 2024, Maltclub</p>
+        <p>Din månedlige leverandør af kvalitetsøl</p>
+        <p>Sikker handel</p>
+      </div>
     </div>
   </div>
 </section>
