--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,5 +1,23 @@
 ---
+const { variant = "primary", size = "medium", href = "#", target = "_self" } = Astro.props;
+
+const variantClasses = {
+  primary: "cursor-pointer text-grey-500 shadow-drop25 bg-blue-500 hover:bg-blue-400 rounded",
+  secondary: "cursor-pointer border-2 border-orange-500 text-orange-500  shadow-drop25 hover:border-blue-500 rounded hover:text-blue-500",
+};
+
+const sizeClasses = {
+  large: "px-44 py-2 text-base",
+  medium: "px-4 py-4 text-xs",
+  small: "px-2 py-0.5 text-xxs",
+};
 ---
-<div>
-    <button class="border-2 border-black"><slot /></button>
+
+<div class="flex justify-center items-center pt-16 lg:p-8">
+  <a href={href} class:list={[variantClasses[variant], sizeClasses[size]]} target={target}>
+    <slot />
+  </a>
 </div>
+<!-- <Button variant="primary" size="medium" href="/your-link">KØB ABONNEMENT</Button>
+    <Button variant="secondary" size="medium" href="/your-link">KØB ABONNEMENT</Button>
+    <Button variant="primary" size="large" href="/your-link">FORTSÆT TIL BETALING</Button> -->
