--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,8 +12,8 @@ import logo from "../assets/images/logo.png";
     </div>
     <nav id="desktopmenu" class="hidden font-display lg:flex flex-1 justify-end text-lg">
       <ul class="flex flex-row gap-8 pr-8">
-        <li class="hover:opacity-75"><a href="#Hvaderplastikforurening">VORES ABONNEMENTER</a></li>
-        <li class="hover:opacity-75"><a href="#Problemetmedplastikforurening">OM OS</a></li>
+        <li class="hover:opacity-50 text-blue-500"><a href="#">VORES ABONNEMENTER</a></li>
+        <li class="hover:opacity-50 text-blue-500"><a href="#">OM OS</a></li>
       </ul>
       <div>
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
