--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -17,7 +17,7 @@ const { title } = Astro.props;
     <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet" />
     <title>{Astro.props.title}</title>
   </head>
-  <body class="">
+  <body class="bg-grey-500">
     <header>
       <Header />
     </header>
