--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import nyhed from "../assets/images/nyhed.png";
       <Image src={goldentaste} alt="billede" class="w-14 sm:w-20 lg:w-48" />
       <Image src={bobble} alt="billede" class="w-14 sm:w-20 lg:w-48" />
     </div>
-    <div class="relative z-20">
+    <div class="relative z-20 flex justify-center pt-7">
       <Button variant="primary" size="medium" href="/your-link">KØB ABONNEMENT</Button>
     </div>
 
@@ -46,15 +46,19 @@ import nyhed from "../assets/images/nyhed.png";
   </section>
 
   <section class="pt-36 px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
-    <h2 class="text-blue-500 pb-16">BOKS ABONNEMENT</h2>
-    <div class="lg:grid lg:grid-cols-2 gap-20">
-      <div>
+    <h2 class="text-blue-500 pb-16 text-medium">BOKS ABONNEMENT</h2>
+    <div class="lg:grid lg:grid-cols-[1fr_auto] gap-6">
+      <div class="lg:w-4/5 lg:flex lg:flex-col lg:place-content-center">
         <h3 class="text-4xl font-bold text-blue-500">GØR HVER MÅNED TIL EN SMAGSREJSE!</h3>
         <p class="text-blue-500 pt-7">Vælg et øl abonnement, der passer til dig, og oplev nye håndplukkede specialøl, som du ikke finder andre steder kun et klik væk.</p>
         <p class="text-blue-500 pb-10 pt-4">Find din favorit i dag og gør hver måned til noget særligt!</p>
+        <div class="pb-9">
+          <Button variant="primary" size="medium" href="/your-link"> KØB ABONNEMENT </Button>
+        </div>
       </div>
-      <div class="bg-rosa-500 w-96 h-72 pt-4 rounded">
-        <Image src={boks} alt="billede" class="w-72 m-auto" />
+
+      <div class="bg-rosa-500 w-96 h-80 lg:pt-4 rounded">
+        <Image src={boks} alt="billede" class="w-80 m-auto" />
       </div>
     </div>
   </section>
