--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,6 @@ import MainLayout from "../layouts/MainLayout.astro";
 import Button from "../components/Button.astro";
 import Link from "../components/Link.astro";
 import { Image } from "astro:assets";
-import thumbsup from "../assets/images/thumbsup.png";
 import wildtiger from "../assets/images/wildtiger_maltclub.png";
 import wa from "../assets/images/WA1987_maltclub.png";
 import wave from "../assets/images/wave_maltclub.png";
@@ -12,15 +11,14 @@ import takeasip from "../assets/images/takeasip_maltclub.png";
 import goldentaste from "../assets/images/goldentaste_maltclub.png";
 import bobble from "../assets/images/bobble_maltclub.png";
 import boks from "../assets/images/boks.png";
-import beerglass1 from "../assets/images/beer_glass1.png";
-import beerglass2 from "../assets/images/beer_glass2.png";
-import background1 from "../assets/images/background_image1.png";
-import background2 from "../assets/images/background_image2.png";
+import beerglass1 from "../assets/images/beer_glass1.svg";
+import beerglass2 from "../assets/images/beer_glass2.svg";
+import background1 from "../assets/images/background_image1.svg";
+import background2 from "../assets/images/background_image2.svg";
 import info1 from "../assets/images/info1.png";
 import info2 from "../assets/images/info2.png";
 import info3 from "../assets/images/info3.png";
 import info4 from "../assets/images/info4.png";
-import nyhed from "../assets/images/nyhed.png";
 ---
 
 <MainLayout title="Maltclub">
@@ -45,7 +43,7 @@ import nyhed from "../assets/images/nyhed.png";
     <div class="absolute inset-0 py-20 lg:py-52 bg-rosa-500 top-36 lg:top-72 z-10"></div>
   </section>
 
-  <section class="pt-36 px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
+  <section class="pt-36 pb-36 px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
     <h2 class="text-blue-500 pb-16 text-medium">BOKS ABONNEMENT</h2>
     <div class="lg:grid lg:grid-cols-[1fr_auto] gap-6">
       <div class="lg:w-4/5 lg:flex lg:flex-col lg:place-content-center">
@@ -63,9 +61,17 @@ import nyhed from "../assets/images/nyhed.png";
     </div>
   </section>
 
-  <section class="pt-36"></section>
+  <section class="relative lg:w-full lg:min-h-screen">
+    <div class="absolute inset-0 z-10">
+      <Image src={background1} alt="billede" class="" />
+    </div>
 
-  <section class="pt-36 px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
+    <!-- <div class="relative z-20 pl-80 pt-28 min-h-screen">
+      <Image src={beerglass1} alt="Beer Glass" class="w-1/3 sm:w-1/4 lg:w-5/12" />
+    </div> -->
+  </section>
+
+  <section class="pt-72 px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
     <h2 class="text-blue-500 flex justify-center">DINE FORDELE</h2>
     <h2 class="text-blue-500 flex justify-center">VED ET MALTCLUB ABONNEMENT</h2>
     <div>
@@ -96,7 +102,17 @@ import nyhed from "../assets/images/nyhed.png";
   <section class="pt-36">
     <div class="bg-rosa-500 py-36 lg:grid lg:grid-cols-2">
       <h3 class="text-4xl font-bold pl-4 lg:pl-64 text-blue-500">FLEKSIBILITET PÅ <br />DINE PRÆMISSER</h3>
-      <p class="pl-4 pt-5 lg:pt-0 lg:w-3/5 lg:pl-0 text-blue-500">Hos Maltclub gør vi det nemt for dig. Opret dit abonnement på få minutter, og nyd dine specialøl uden bekymringer. Har du brug for en pause? Opsig dit abonnement lige så nemt, som du oprettede det - helt uden bøvl.</p>
+      <p class="pl-4 pt-5 lg:pt-0 lg:w-3/5 lg:pl-0 pb-4 text-blue-500">Hos Maltclub gør vi det nemt for dig. Opret dit abonnement på få minutter, og nyd dine specialøl uden bekymringer. Har du brug for en pause? Opsig dit abonnement lige så nemt, som du oprettede det - helt uden bøvl.</p>
+
+      <Button variant="primary" size="medium" href="/your-link"> KØB ABONNEMENT </Button>
+
+      <Button variant="secondary" size="medium" href="/your-link"> OPSIG ABONNEMENT </Button>
+    </div>
+  </section>
+
+  <section class="relative lg:w-full lg:min-h-screen">
+    <div class="absolute inset-0 z-10">
+      <Image src={background2} alt="Baggrund" class="" />
     </div>
   </section>
 
@@ -113,6 +129,7 @@ import nyhed from "../assets/images/nyhed.png";
 
     <form class="flex flex-col items-center space-y-4 w-full max-w-sm mx-auto pt-4">
       <input type="email" placeholder="Indtast din e-mail" class="w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required />
+      <Button variant="secondary" size="medium" href="/your-link"> TILMELD </Button>
     </form>
   </section>
 </MainLayout>
