--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,10 +15,11 @@ import beerglass1 from "../assets/images/beer_glass1.svg";
 import beerglass2 from "../assets/images/beer_glass2.svg";
 import background1 from "../assets/images/background_image1.svg";
 import background2 from "../assets/images/background_image2.svg";
-import info1 from "../assets/images/info1.png";
-import info2 from "../assets/images/info2.png";
-import info3 from "../assets/images/info3.png";
-import info4 from "../assets/images/info4.png";
+import info1 from "../assets/images/info1.svg";
+import info2 from "../assets/images/info2.svg";
+import info3 from "../assets/images/info3.svg";
+import info4 from "../assets/images/info4.svg";
+import car from "../assets/images/info4.svg";
 ---
 
 <MainLayout title="Maltclub">
@@ -71,42 +72,44 @@ import info4 from "../assets/images/info4.png";
     </div> -->
   </section>
 
-  <section class="pt-72 px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
-    <h2 class="text-blue-500 flex justify-center">DINE FORDELE</h2>
+  <section class="pt-80 px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
+    <h2 class="text-blue-500 flex justify-center text-large">DINE FORDELE</h2>
     <h2 class="text-blue-500 flex justify-center">VED ET MALTCLUB ABONNEMENT</h2>
-    <div>
+    <div class="pt-28">
       <Image src={info1} alt="billede" class="w-60" />
-      <h3 class="text-xl font-bold text-blue-500">BESTIL DIT MALTCLUB ØL ABONNMENT</h3>
-      <p class="text-blue-500">Vælg hvilket øl abonnement du ønsker at modtage. Få leveret et lækkert udvalg af kvalitetsøl fra danske og udenlandske bryggerier direkte hjem til dig eller din nærmeste pakkeshop.</p>
+      <h3 class="text-xl font-bold text-blue-500 pt-4">BESTIL DIT MALTCLUB ØL ABONNMENT</h3>
+      <p class="text-blue-500 w-96 pt-2">Vælg hvilket øl abonnement du ønsker at modtage. Få leveret et lækkert udvalg af kvalitetsøl fra danske og udenlandske bryggerier direkte hjem til dig eller din nærmeste pakkeshop.</p>
     </div>
 
     <div>
       <Image src={info2} alt="billede" class="w-60" />
-      <h3 class="text-xl font-bold text-blue-500">NYD DINE ØL I GODT SELVSKAB</h3>
-      <p class="text-blue-500">Inviter gode venner eller familie på besøg og byd på lækre specialøl. Med et MaltClub øl abonnement er du sikker på at kunne byde på gode øl til enhver lejlighed - med mindre du selvfølgelig har nået at drikke dine øl inden du får gæster på besøg.</p>
+      <h3 class="text-xl font-bold text-blue-500 pt-4">NYD DINE ØL I GODT SELVSKAB</h3>
+      <p class="text-blue-500 w-96 pt-2">Inviter gode venner eller familie på besøg og byd på lækre specialøl. Med et MaltClub øl abonnement er du sikker på at kunne byde på gode øl til enhver lejlighed - med mindre du selvfølgelig har nået at drikke dine øl inden du får gæster på besøg.</p>
     </div>
 
     <div>
       <Image src={info3} alt="billede" class="w-24" />
-      <h3 class="text-xl font-bold text-blue-500">UNIKKE OG SMAGSVÆKKENDE</h3>
-      <p class="text-blue-500">MaltClub giver dig en kulinarisk smagsoplevelse med et udvalg af unikke specialøl. Samtidig sparer du tid og får adgang til varianter, som du måske aldrig ville opdage i dit lokale supermarked.</p>
+      <h3 class="text-xl font-bold text-blue-500 pt-4">UNIKKE OG SMAGSVÆKKENDE</h3>
+      <p class="text-blue-500 w-96 pt-2">MaltClub giver dig en kulinarisk smagsoplevelse med et udvalg af unikke specialøl. Samtidig sparer du tid og får adgang til varianter, som du måske aldrig ville opdage i dit lokale supermarked.</p>
     </div>
 
     <div>
       <Image src={info4} alt="billede" class="w-36" />
-      <h3 class="text-xl font-bold text-blue-500">SPAR TID OG PENGE</h3>
-      <p class="text-blue-500">Hos MaltClub kombinerer vi smag og værdi, så du kan nyde unikke øl af høj kvalitet til billigere penge - uden at bruge tid på at lede efter dem.</p>
+      <h3 class="text-xl font-bold text-blue-500 pt-4">SPAR TID OG PENGE</h3>
+      <p class="text-blue-500 w-96 pt-2">Hos MaltClub kombinerer vi smag og værdi, så du kan nyde unikke øl af høj kvalitet til billigere penge - uden at bruge tid på at lede efter dem.</p>
     </div>
   </section>
 
   <section class="pt-36">
-    <div class="bg-rosa-500 py-36 lg:grid lg:grid-cols-2">
-      <h3 class="text-4xl font-bold pl-4 lg:pl-64 text-blue-500">FLEKSIBILITET PÅ <br />DINE PRÆMISSER</h3>
-      <p class="pl-4 pt-5 lg:pt-0 lg:w-3/5 lg:pl-0 pb-4 text-blue-500">Hos Maltclub gør vi det nemt for dig. Opret dit abonnement på få minutter, og nyd dine specialøl uden bekymringer. Har du brug for en pause? Opsig dit abonnement lige så nemt, som du oprettede det - helt uden bøvl.</p>
-
-      <Button variant="primary" size="medium" href="/your-link"> KØB ABONNEMENT </Button>
-
-      <Button variant="secondary" size="medium" href="/your-link"> OPSIG ABONNEMENT </Button>
+    <div class="bg-rosa-500 py-36">
+      <div class="lg:grid lg:grid-cols-2">
+        <h3 class="text-4xl font-bold pl-4 lg:pl-64 text-blue-500">FLEKSIBILITET PÅ <br />DINE PRÆMISSER</h3>
+        <p class="pl-4 pt-5 lg:pt-0 lg:w-3/5 lg:pl-0 pb-4 text-blue-500">Hos Maltclub gør vi det nemt for dig. Opret dit abonnement på få minutter, og nyd dine specialøl uden bekymringer. Har du brug for en pause? Opsig dit abonnement lige så nemt, som du oprettede det - helt uden bøvl.</p>
+      </div>
+      <div class="w-40">
+        <Button variant="primary" size="medium" href="/your-link"> KØB ABONNEMENT </Button>
+        <Button variant="secondary" size="medium" href="/your-link"> OPSIG ABONNEMENT </Button>
+      </div>
     </div>
   </section>
 
@@ -116,10 +119,18 @@ import info4 from "../assets/images/info4.png";
     </div>
   </section>
 
-  <section class="pt-36">
+  <section class="pt-96">
+    <Image src={beer_car} alt="Baggrund" class="" />
+
     <div class="bg-rosa-500 py-44 pl-4">
-      <h2 class="text-blue-500 lg:flex lg:justify-center">VI LERVERER DIN ORDRE</h2>
-      <p class="text-blue-500 lg:flex lg:justify-center pt-4">Læn dig tilbage - vi leverer dine øl fra MaltClub i starten af hver måned. Øllene leveres direkte hjem til dig eller til nærmeste pakkeshop - det kunne ikke være lettere!</p>
+      <h2 class="text-blue-500 text-large lg:flex lg:justify-center">VI LERVERER DIN ORDRE</h2>
+      <div class="lg:flex lg:justify-center">
+        <p class="text-blue-500 lg:w-3/6 pt-4 lg:m-auto">Læn dig tilbage - vi leverer dine øl fra MaltClub i starten af hver måned. Øllene leveres direkte hjem til dig eller til nærmeste pakkeshop - det kunne ikke være lettere!</p>
+      </div>
+
+      <div class="lg:flex lg:justify-center pt-6">
+        <Button variant="primary" size="medium" href="/your-link"> KØB ABONNEMENT </Button>
+      </div>
     </div>
   </section>
 
@@ -131,5 +142,17 @@ import info4 from "../assets/images/info4.png";
       <input type="email" placeholder="Indtast din e-mail" class="w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required />
       <Button variant="secondary" size="medium" href="/your-link"> TILMELD </Button>
     </form>
+  </section>
+
+  <section class="lg:px-2 max-w-screen-xl mx-auto pb-36">
+    <h2 class="text-large pt-36 pb-14">BESTSELLER</h2>
+    <div class="flex justify-center">
+      <Image src={sweetoliven} alt="Baggrund" class="w-56 rotate-12" />
+      <div class="w-2/4 pt-72 pl-32">
+        <h2 class="text-medium">SWEET OLIVE</h2>
+        <p>Nyd vores organiske bestseller - en harmonisk balance af friske noter og uventede smagsnuancer – en ægte smagsoplevelse i hvert glas.</p>
+        <p>Denne bestseller er altid med i vores abonnementer, så ligegyldigt hvilken pakke du køber vil du altid kunne nyde denne lækre øl.</p>
+      </div>
+    </div>
   </section>
 </MainLayout>
