--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import car from "../assets/images/beer_car.png";
 <MainLayout title="Maltclub">
   <section class="relative">
     <h1 class="flex justify-center text-blue-500 text-large lg:text-xlarge">MALTCLUB</h1>
-    <h3 class="flex justify-center text-blue-500 text-medium font-bold lg:pt-4 lg:text-xl">DIN ØLFORHANDLER PÅ ABONNEMENT</h3>
+    <h3 class="flex justify-center text-blue-500 text-sm font-bold lg:pt-4 lg:text-xl">DIN ØLFORHANDLER PÅ ABONNEMENT</h3>
 
     {/* Billedernes container */}
     <div class="relative z-20 flex justify-center px-4 sm:px-4 md:px-6 lg:pt-7 lg:px-2 mx-auto">
