--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,7 @@ import info2 from "../assets/images/info2.svg";
 import info3 from "../assets/images/info3.svg";
 import info4 from "../assets/images/info4.svg";
 import car from "../assets/images/beer_car.png";
+import klat from "../assets/images/klat.svg";
 ---
 
 <MainLayout title="Maltclub">
@@ -69,30 +70,38 @@ import car from "../assets/images/beer_car.png";
   </section>
 
   <section class="pt-80 px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
-    <h2 class="text-blue-500 flex justify-center text-large pt-20">DINE FORDELE</h2>
-    <h2 class="text-blue-500 flex justify-center">VED ET MALTCLUB ABONNEMENT</h2>
-    <div class="pt-28">
-      <Image src={info1} alt="billede" class="w-60" />
-      <h3 class="text-xl font-bold text-blue-500 pt-4">BESTIL DIT MALTCLUB ØL ABONNMENT</h3>
-      <p class="text-blue-500 w-96 pt-2">Vælg hvilket øl abonnement du ønsker at modtage. Få leveret et lækkert udvalg af kvalitetsøl fra danske og udenlandske bryggerier direkte hjem til dig eller din nærmeste pakkeshop.</p>
+    <div class="relative">
+      <Image src={klat} alt="billede" class="w-3/5 pt-32 sm:w-3/5 lg:pt-10 m-auto lg:w-3/5" />
+      <div class="absolute top-0 left-0 right-0 bottom-0 flex flex-col justify-center items-center w-full h-full">
+        <h2 class="text-blue-500 lg:text-large pt-28">DINE FORDELE</h2>
+        <h2 class="text-blue-500">VED ET MALTCLUB ABONNEMENT</h2>
+      </div>
     </div>
 
-    <div>
-      <Image src={info2} alt="billede" class="w-60" />
-      <h3 class="text-xl font-bold text-blue-500 pt-4">NYD DINE ØL I GODT SELVSKAB</h3>
-      <p class="text-blue-500 w-96 pt-2">Inviter gode venner eller familie på besøg og byd på lækre specialøl. Med et MaltClub øl abonnement er du sikker på at kunne byde på gode øl til enhver lejlighed - med mindre du selvfølgelig har nået at drikke dine øl inden du får gæster på besøg.</p>
-    </div>
+    <div class="lg:grid lg:grid-cols-2 lg:grid-rows-2">
+      <div class="pt-28 pl-16">
+        <Image src={info1} alt="billede" class="w-60" />
+        <h3 class="text-xl font-bold text-blue-500 pt-4">BESTIL DIT MALTCLUB ØL ABONNMENT</h3>
+        <p class="text-blue-500 w-96 pt-2">Vælg hvilket øl abonnement du ønsker at modtage. Få leveret et lækkert udvalg af kvalitetsøl fra danske og udenlandske bryggerier direkte hjem til dig eller din nærmeste pakkeshop.</p>
+      </div>
 
-    <div>
-      <Image src={info3} alt="billede" class="w-24" />
-      <h3 class="text-xl font-bold text-blue-500 pt-4">UNIKKE OG SMAGSVÆKKENDE</h3>
-      <p class="text-blue-500 w-96 pt-2">MaltClub giver dig en kulinarisk smagsoplevelse med et udvalg af unikke specialøl. Samtidig sparer du tid og får adgang til varianter, som du måske aldrig ville opdage i dit lokale supermarked.</p>
-    </div>
+      <div class="pt-10 pl-16">
+        <Image src={info2} alt="billede" class="w-60" />
+        <h3 class="text-xl font-bold text-blue-500 pt-4">NYD DINE ØL I GODT SELVSKAB</h3>
+        <p class="text-blue-500 w-96 pt-2">Inviter gode venner eller familie på besøg og byd på lækre specialøl. Med et MaltClub øl abonnement er du sikker på at kunne byde på gode øl til enhver lejlighed - med mindre du selvfølgelig har nået at drikke dine øl inden du får gæster på besøg.</p>
+      </div>
 
-    <div>
-      <Image src={info4} alt="billede" class="w-36" />
-      <h3 class="text-xl font-bold text-blue-500 pt-4">SPAR TID OG PENGE</h3>
-      <p class="text-blue-500 w-96 pt-2">Hos MaltClub kombinerer vi smag og værdi, så du kan nyde unikke øl af høj kvalitet til billigere penge - uden at bruge tid på at lede efter dem.</p>
+      <div class="pt-10 pl-16">
+        <Image src={info3} alt="billede" class="w-24" />
+        <h3 class="text-xl font-bold text-blue-500 pt-4">UNIKKE OG SMAGSVÆKKENDE</h3>
+        <p class="text-blue-500 w-96 pt-2">MaltClub giver dig en kulinarisk smagsoplevelse med et udvalg af unikke specialøl. Samtidig sparer du tid og får adgang til varianter, som du måske aldrig ville opdage i dit lokale supermarked.</p>
+      </div>
+
+      <div class="pt-10 pl-16">
+        <Image src={info4} alt="billede" class="w-36" />
+        <h3 class="text-xl font-bold text-blue-500 pt-4">SPAR TID OG PENGE</h3>
+        <p class="text-blue-500 w-96 pt-2">Hos MaltClub kombinerer vi smag og værdi, så du kan nyde unikke øl af høj kvalitet til billigere penge - uden at bruge tid på at lede efter dem.</p>
+      </div>
     </div>
   </section>
 
