--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,7 @@ import info3 from "../assets/images/info3.svg";
 import info4 from "../assets/images/info4.svg";
 import car from "../assets/images/beer_car.png";
 import klat from "../assets/images/klat.svg";
+import gif from "../assets/images/bubbles.gif";
 ---
 
 <MainLayout title="Maltclub">
@@ -64,16 +65,22 @@ import klat from "../assets/images/klat.svg";
   </section>
 
   <section class="relative lg:w-full lg:min-h-screen">
+    <!-- Baggrundsbillede -->
     <div class="absolute inset-0 z-10">
-      <Image src={background1} alt="billede" class="" />
+      <Image src={background1} alt="Baggrund" class="w-full h-full object-cover" />
+    </div>
+
+    <!-- GIF Billede -->
+    <div class="absolute inset-0 top-96 left-2/4 z-20">
+      <Image src={gif} alt="GIF" class="w-7" />
     </div>
   </section>
 
-  <section class="pt-80 px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
+  <section class="pt-28 px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
     <div class="relative">
       <Image src={klat} alt="billede" class="w-3/5 pt-32 sm:w-3/5 lg:pt-10 m-auto lg:w-3/5" />
       <div class="absolute top-0 left-0 right-0 bottom-0 flex flex-col justify-center items-center w-full h-full">
-        <h2 class="text-blue-500 lg:text-large pt-28">DINE FORDELE</h2>
+        <h2 class="text-blue-500 lg:text-large pt-22">DINE FORDELE</h2>
         <h2 class="text-blue-500">VED ET MALTCLUB ABONNEMENT</h2>
       </div>
     </div>
@@ -121,7 +128,7 @@ import klat from "../assets/images/klat.svg";
 
   <section class="relative lg:w-full lg:min-h-screen">
     <div class="absolute inset-0 z-10">
-      <Image src={background1} alt="Baggrund" class="" />
+      <Image src={background2} alt="Baggrund" class="" />
     </div>
   </section>
 
@@ -220,7 +227,7 @@ import klat from "../assets/images/klat.svg";
   import gsap from "gsap";
   document.addEventListener("DOMContentLoaded", () => {
     const overlay = document.getElementById("overlay");
-    const herotitle = document.getElementById("herotitle").querySelector("h1");
+    const herotitle = document.getElementById("herotitle").querySelector("h2");
 
     if (herotitle) {
       const result = Splitting({ target: herotitle, by: "chars" });
